clusters/infrastructure/prod/security/falco/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: falco
  labels:
    goldilocks.fairwinds.com/enabled: "true"
